# camera-processor

./: CMakeLists.txt  README.md  package.xml
src/: camera_processor_node.cpp  photo_capture_node.cpp
