<?xml version="1.0"?>
<package format="2">
  <name>camera_processor</name>
  <version>0.1.0</version>
  <description>ROS2 node for camera capture, detection and depth measurement</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>nlohmann_json</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
