<?xml version="1.0"?>
<package format="3">
  <name>photo_capture</name>
  <version>0.1.0</version>
  <description>ROS2 C++ node that captures photo on trigger</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>OpenCV</depend>

  <exec_depend>ament_cmake</exec_depend>
</package>
